# wxFortress

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  build-all.bat
data/shaders/: Particle.frag  Particle.vs  Sprite.fraq  Sprite.vs  Text.frag  Text.vs  Video.fraq  Video.vs
data/shaders_old/: Particle.vs
resources/: levels.txt  levels_orig.txt
resources/shaders/: Particle.frag  Sprite.vs  Text.frag  VideoNV12.fraq
src/: App.h  MainFrame.cpp  MainFrame.h  MediaManager.cpp  MediaManager.h  Overlay.cpp  Overlay.h  RenderWindow.cpp  RenderWindow.h  Singleton.hpp  SoundManager.cpp  SoundManager.h  Timer.cpp  Tools.cpp  Tools.h  main.cpp
src/Common/: Point.hpp  Rect.hpp  Semaphore.hpp  Singleton.hpp  Timer.cpp  Timer.h  Tools.cpp  Tools.h  defs.h  xRect.hpp
src/ControlPanel/: Counter.hpp  Panel.cpp  Panel.h
src/Renderer/: CountDown.cpp  CountDown.h  Overlay.cpp  Overlay.h  RenderWindow.cpp  RenderWindow.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  VideoRenderer.cpp  VideoRenderer.h
src/Shapes/: Ball.cpp  Ball.h  Base.cpp  Base.h  Board.cpp  Board.h  Brick.cpp  Brick.h  Bricks.cpp  Bricks.h  Explosion.cpp  Explosion.h  Explosions.cpp  Explosions.h  MoveController.cpp  MoveController.h  ParticleGenerator.cpp  ParticleGenerator.h  ShapesManager.cpp  ShapesManager.h  ShapesRender.cpp  ShapesRender.h
src/Sounds/: SoundManager.cpp  SoundManager.h
src/Sounds/AudioFile/: AudioFile.h
src/Sounds/no_gpl_dependency/: main_nogpl.cpp
src/Video/: Audio.cpp  Audio.h  Chronons.h  FFmpeg.h  MediaManager.cpp  MediaManager.h  Movie.cpp  Movie.h  PacketQueue.hpp  Video.cpp  Video.h  wxFFmpegView.cpp  wxFFmpegView.h
tests/: CMakeLists.txt  TestApp.hpp  entry.cpp  memory_leak.h
